--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,13 +15,127 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+.Signin-card{
+  border: 2px solid rgb(0, 200, 255);
+  box-shadow: 3px 0px 20px rgb(0, 229, 255);
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  margin-top: 25px;
+  padding-left: 100px;  
+  padding-bottom: 140px;
+  margin-bottom: 30px;
+  margin-left: 390px;
+  margin-right: 400px;
+ 
+}
+.style-btns2{
+  border-radius: 8px;
+  height: 47px;
+  font-size: 15px;
+  font-family: cursive;
+  width: 90px;
+  background-color: black;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-left: 80px;
+  margin-top: 60px; 
+}
+.style-btns{
+  border-radius: 8px;
+  height: 47px;
+  font-size: 15px;
+  font-family: cursive;
+  width: 90px;
+  background-color: black;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-left: 30px;
+  margin-top: 60px;
+}
 
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
-      transparent,
+      /* transparent, */
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+.nav-style{
+  background-color:  black;
+  height: 50px;
+}
+.style-btns3{
+  border-radius: 8px;
+  height: 47px;
+  font-size: 15px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  width: 90px;
+  background-color:rgb(15, 17, 39);
+  color: rgb(255, 255, 255);
+  border: none;
+  cursor: pointer;
+}
+.pic-style{
+  width: 35px;
+  border-radius: 20px;
+}
+.h1-style{
+  color: black;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 30px;
+  padding-left: 20px;
+}
+.img-style{
+  width: 900px;
+  height: 400px;
+}
+.Signin-card1{
+  border: 2px solid rgb(0, 200, 255);
+  box-shadow: 3px 0px 20px rgb(0, 229, 255);
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  margin-top: 25px;
+  padding: 4px 4px;  
+  padding-bottom: 140px;
+  margin-bottom: 80px;
+  margin-left: 200px;
+  margin-right: 200px;
+ border-radius: 10px;
+}
+.sidebar-style{
+  overflow: scroll;
+}
+.img-style1{
+  padding-top: 8px;
+border-radius: 50%;
+}
+.h1-style1{
+  position: relative;
+  top: -37px;
+  left: 60px;
+}
+
+.Signin-card2{
+  border: 4px solid rgb(0, 255, 255);
+  box-shadow: 3px 0px 20px rgb(0, 229, 255);
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  margin-top: 25px;
+  padding: 4px 4px;  
+  padding-bottom: 140px;
+  margin-bottom: 80px;
+  margin-left: 150px;
+  margin-right: 250px;
+ border-radius: 10px;
+
+}
+.title-styles{
+  position: relative;
+  top: -12px;
+  left: 5px;
 }
