--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,17 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
+  background-image: url("https://blog.depositphotos.com/wp-content/uploads/2017/07/Soothing-nature-backgrounds-2.jpg");
+  background-size: cover;
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
+  background-size: cover;
+    background-image: url("https://4kwallpapers.com/images/wallpapers/dark-background-abstract-background-network-3d-background-1440x900-8324.png");
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+    
   }
 }
 .Signin-card{
@@ -22,6 +29,20 @@
   background-color: rgb(255, 255, 255);
   padding: 10px;
   margin-top: 25px;
+  padding-left: 100px;  
+  padding-bottom: 140px;
+  margin-bottom: 30px;
+  margin-left: 390px;
+  margin-right: 400px;
+ 
+}
+.Signin-card12{
+  border: 2px solid rgb(0, 0, 0);
+  box-shadow: 3px 0px 20px rgb(5, 4, 4);
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  margin-top: 100px;
   padding-left: 100px;  
   padding-bottom: 140px;
   margin-bottom: 30px;
@@ -114,28 +135,87 @@ body {
   padding-top: 8px;
 border-radius: 50%;
 }
-.h1-style1{
-  position: relative;
-  top: -37px;
-  left: 60px;
-}
 
 .Signin-card2{
-  border: 4px solid rgb(0, 255, 255);
-  box-shadow: 3px 0px 20px rgb(0, 229, 255);
+  border: 1px solid rgb(0, 0, 0);
+  box-shadow: 3px 0px 20px rgb(0, 0, 0);
   border-radius: 10px;
   background-color: rgb(255, 255, 255);
   margin-top: 25px;
   padding: 4px 4px;  
-  padding-bottom: 140px;
+  padding-bottom: 0px;
   margin-bottom: 80px;
-  margin-left: 150px;
-  margin-right: 250px;
+  margin-left: 70px;
+  margin-right: 130px;
  border-radius: 10px;
+ overflow:scroll;
 
 }
 .title-styles{
+ margin-top: 20px;
+}
+.con-sty{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-left: 40px;
+  margin-top: 20px;
+  font-size: 20px;
+}
+.image-sty{
+  margin-top: 10px;
+  width: 30px;
+  height: 30px;
+
+}
+.email-style{
+  font-size: 13px;
+  padding-left: 50px;
+  margin-top: -20px;
+}
+.h1-style12{
+  font-size: 11px;
+  margin-top: -45px;
+  margin-left: 60px;
+}
+.h1-style1{
+  font-size: 15px;
   position: relative;
-  top: -12px;
-  left: 5px;
+  top: -44px;
+  left: 60px;
+}
+.btn-s{
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  padding: 2px 17px;
+  font-size: 18px;
+  border: 3px solid black;
+ position: relative;
+ top: 50px;
+ left: 85px;
+}
+.text-style{
+  margin-top: 10px;
+  margin-left: 40px;
+}
+.label-style{
+  margin-left: 115px;
+  padding-top: 30px;
+}
+.like-style{
+  cursor: pointer;
+  margin-top:8px;
+  margin-left: 40px;
+  transition: 1s all;
+}
+.like-style::after{
+  color: red;
+  background-color: red;
+}
+.cmt-style{
+  cursor: pointer; 
+  margin-top:2px;
+  margin-left: -40px;
+}
+.share-style{
+  cursor: pointer;
+  margin-top:8px;
+  margin-right: 50px;   
 }
